--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-I am solving problems from https://projecteuler.net/archives as it's a greate way to improve optimisation technics. Numbers in the name of the file indicate the number of chalange in the archives.
+I am solving problems from https://projecteuler.net/archives as it's a greate way to improve optimisation technics. 
+Numbers in a name of a file indicate the number of a chalange in the archives.
